fixed journals admin page. the journal view had a lot of overflow. Made it so that it scrolls.

--- a/web_frontend/src/AdminJournalsPage.css
+++ b/web_frontend/src/AdminJournalsPage.css
@@ -66,7 +66,7 @@
 }
 
 .journal-entry {
-    background-color: #E6E6FA; /* Light color for journal entries */
+    background-color: #ffffff; /* Light color for journal entries */
     border: 1px solid #6578A4; /* Glaucous border */
     border-radius: 4px;
     padding: 10px;
@@ -80,7 +80,7 @@
 }
 
 .journal-entry.not-submitted {
-    background-color: #afa0be; /* Red for not submitted */
+    background-color: #E6E6FA; /* Red for not submitted */
     color: #27021c !important;
 }
 
@@ -96,28 +96,53 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
+    height: 100%; /* Ensure it covers the full height */
+    background: rgba(0, 0, 0, 0.3); /* Slightly darkened background */
     display: flex;
-    align-items: center;
     justify-content: center;
-    z-index: 1000;
+    align-items: center;
+    overflow-y: auto; /* Enable vertical scrolling */
 }
 
 .popup-content {
-    background: white;
+    background: #fff;
     padding: 20px;
-    border-radius: 5px;
-    width: 80%;
-    max-width: 500px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    color: #27021c; /* Dark purple for text */
+    border-radius: 8px;
+    width: 90%; /* Adjust the width to 90% */
+    max-width: 900px; /* Set a maximum width */
+    max-height: 90%; /* Adjust the height to 90% */
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    position: relative; /* Ensure the close button can be positioned relative to this */
+    display: flex;
+    flex-direction: column; /* Ensure children are stacked vertically */
+    box-sizing: border-box; /* Include padding and border in the element's width and height */
+    overflow-y: auto; /* Ensure content within the popup can scroll */
 }
 
+.formatted-content {
+    width: 100%;
+    height: 100%;
+    overflow-y: auto;
+    box-sizing: border-box;
+}
+
+.close-button {
+    position: sticky;
+    bottom: 0;
+    margin-top: auto; /* Push the button to the bottom */
+    padding: 10px 20px;
+    border-radius: 7px;
+    background-color: #76A5D0; /* Ruddy Blue */
+    color: black;
+    font-weight: bold;
+    text-align: center;
+    cursor: pointer;
+    margin-bottom: 20px; /* Add some margin at the bottom */
+}
 .backAJ {
     width: 140px;
     font-weight: bold;
-    padding: 10px 20px;
+    padding: 10px 20px; 
     border-radius: 7px;
     background-color: #76A5D0; /* Ruddy Blue */
     color: black;
@@ -160,6 +185,10 @@
 .customBtns:hover {
     background-color: #27021c;
     color: white;
+}
+
+.formatted-content{
+    width: 100%;
 }
 
 @media screen and (max-width: 480px) {
